# kagari

./: Cargo.toml  LICENSE  README.md
assets/: info.teshnakamura.Kagari.desktop
scripts/: build-deb.sh
src/: main.rs
