[package]
name = "kagari"
version = "0.1.2"
edition = "2021"
description = "Wayland-native live system metrics graph (psensor replacement)"
authors = ["Tesh Nakamura <tesh@teshnakamura.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/teshnakamura/kagari"
homepage = "https://github.com/teshnakamura/kagari"

[dependencies]
gtk4 = "0.9"
serde_json = "1"

[profile.release]
opt-level = 2

[package.metadata.deb]
maintainer = "Tesh Nakamura <tesh@teshnakamura.com>"
copyright = "2026 Tesh Nakamura"
license-file = ["LICENSE", "0"]
section = "utils"
priority = "optional"
# $auto pulls in shared-library deps (e.g. libgtk-4-1) via dpkg-shlibdeps;
# lm-sensors is an exec-time dependency for temperatures/fans.
depends = "$auto, lm-sensors"
extended-description = """
kagari (the kanji 篝, a watchfire) is a Wayland-native live graph of system \
metrics: temperatures, CPU and memory usage, and fan speeds. Unlike psensor \
under XWayland, it keeps updating while the window is visible by separating \
data collection from drawing."""
assets = [
    ["target/release/kagari", "usr/bin/", "755"],
    ["assets/info.teshnakamura.Kagari.desktop", "usr/share/applications/", "644"],
    ["assets/kagari.svg", "usr/share/icons/hicolor/scalable/apps/", "644"],
    ["README.md", "usr/share/doc/kagari/README", "644"],
]
